log
Sat 29 Mar 2025 12:02:44 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
25021aa
Sun 30 Mar 2025 12:16:49 AM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
decfe0e
Sun 30 Mar 2025 12:21:15 AM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
3c15a83
Sun 30 Mar 2025 12:22:14 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e45b062
Sun 30 Mar 2025 12:27:54 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
da71a5b
Sun 30 Mar 2025 12:29:28 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
e22f97f
Sun 30 Mar 2025 12:30:44 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7e191a0
Sun 30 Mar 2025 01:04:42 AM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  10|2
total_score: 45/70
4385e2e
Sun 30 Mar 2025 01:07:34 AM UTC: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
list.c:98:1: error: expected identifier or ‘(’ before ‘}’ token
   98 | }
      | ^
Compilation failed
2ced505
Sun 30 Mar 2025 01:07:45 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|1
total_score: 55/70
85e28e4
Sun 30 Mar 2025 01:14:15 AM UTC: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:110:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  110 |     if (list == NULL || list->current == NULL) return NULL;)
      |     ^~
list.c:110:60: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  110 |     if (list == NULL || list->current == NULL) return NULL;)
      |                                                            ^
list.c:110:60: error: expected statement before ‘)’ token
list.c:113:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  113 |     void * data = current->data;
      |                   ^~~~~~~
      |                   popCurrent
list.c:113:19: note: each undeclared identifier is reported only once for each function it appears in
list.c:113:12: error: unused variable ‘data’ [-Werror=unused-variable]
  113 |     void * data = current->data;
      |            ^~~~
list.c:112:12: error: unused variable ‘aux’ [-Werror=unused-variable]
  112 |     Node * aux = list->current;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
749dc65
Sun 30 Mar 2025 01:15:08 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:110:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  110 |     if (list == NULL || list->current == NULL) return NULL;)
      |     ^~
list.c:110:60: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  110 |     if (list == NULL || list->current == NULL) return NULL;)
      |                                                            ^
list.c:110:60: error: expected statement before ‘)’ token
list.c:113:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  113 |     void * data = current->data;
      |                   ^~~~~~~
      |                   popCurrent
list.c:113:19: note: each undeclared identifier is reported only once for each function it appears in
list.c:112:12: error: unused variable ‘aux’ [-Werror=unused-variable]
  112 |     Node * aux = list->current;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
5dc8486
Sun 30 Mar 2025 01:15:27 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:110:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  110 |     if (list == NULL || list->current == NULL) return NULL;)
      |     ^~
list.c:110:60: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  110 |     if (list == NULL || list->current == NULL) return NULL;)
      |                                                            ^
list.c:110:60: error: expected statement before ‘)’ token
list.c:113:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  113 |     void * data = current->data;
      |                   ^~~~~~~
      |                   popCurrent
list.c:113:19: note: each undeclared identifier is reported only once for each function it appears in
list.c:112:12: error: unused variable ‘aux’ [-Werror=unused-variable]
  112 |     Node * aux = list->current;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
4970eab
Sun 30 Mar 2025 01:20:35 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:110:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  110 |     if (list == NULL || list->current == NULL) return NULL;)
      |     ^~
list.c:110:60: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  110 |     if (list == NULL || list->current == NULL) return NULL;)
      |                                                            ^
list.c:110:60: error: expected statement before ‘)’ token
list.c:113:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  113 |     void * data = current->data;
      |                   ^~~~~~~
      |                   popCurrent
list.c:113:19: note: each undeclared identifier is reported only once for each function it appears in
list.c:112:12: error: unused variable ‘aux’ [-Werror=unused-variable]
  112 |     Node * aux = list->current;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
bc401bf
Sun 30 Mar 2025 01:21:03 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:113:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
  113 |     void * data = current->data;
      |                   ^~~~~~~
      |                   popCurrent
list.c:113:19: note: each undeclared identifier is reported only once for each function it appears in
list.c:112:12: error: unused variable ‘aux’ [-Werror=unused-variable]
  112 |     Node * aux = list->current;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
2cec68e
Sun 30 Mar 2025 01:21:37 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
cf1fae4
